objects/TW1_Padroes_Financeiros_Calcada__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Dias_Notificacao_Extrajudicial__c</fullName>
        <label>Dias Notificacao Extrajudicial</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dias_Notificacao_OAB__c</fullName>
        <label>Dias Notificacao OAB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TW1_Saldo_Devedor_Maximo__c</fullName>
        <label>Saldo Devedor Máximo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Padrões Financeiros Calçada</label>
</CustomObject>